new Database added -lb

--- a/Trigger/app/src/main/res/layout/activity_new_exercise.xml
+++ b/Trigger/app/src/main/res/layout/activity_new_exercise.xml
@@ -63,6 +63,25 @@
         android:hint="@string/add_sur_name"
         android:id="@+id/add_sur_name"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Select date of birth"/>
+        <DatePicker
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/datePicker">
+
+        </DatePicker>
+
+    </LinearLayout>
+
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
