--- a/Trigger/app/src/main/res/layout/activity_load_data.xml
+++ b/Trigger/app/src/main/res/layout/activity_load_data.xml
@@ -17,7 +17,7 @@
         android:id="@+id/select_name"/>
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/Load_list">
     </ListView>
