--- a/Trigger/app/src/main/res/values/styles.xml
+++ b/Trigger/app/src/main/res/values/styles.xml
@@ -10,7 +10,8 @@
         <item name="android:navigationBarColor">@android:color/holo_blue_light</item>
         <item name="android:colorBackground">@android:color/holo_blue_dark</item>
         <item name="android:textColorPrimary">@android:color/background_light</item>
-        <item name="android:textColorSecondary">@android:color/background_light</item>
+        <item name="android:textColorSecondary">@android:color/darker_gray</item>
+        <item name="android:textColorPrimaryInverse">@android:color/darker_gray</item>
     </style>
 
 </resources>
