--- a/Trigger/app/src/main/res/layout/activity_graphing.xml
+++ b/Trigger/app/src/main/res/layout/activity_graphing.xml
@@ -96,6 +96,26 @@
                 android:id="@+id/SingleGyroGraph" />
         </LinearLayout>
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Set Description"
+                android:id="@+id/descriptionText"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="@string/save_data"
+                android:id="@+id/SaveButton"/>
+        </LinearLayout>
+
     </ViewFlipper>
 
 </LinearLayout>
