new storing algorithm, stores to external storage mem -lb

--- a/Trigger/app/src/main/res/layout/activity_graphing.xml
+++ b/Trigger/app/src/main/res/layout/activity_graphing.xml
@@ -116,6 +116,20 @@
                 android:id="@+id/SaveButton"/>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Saved!"/>
+
+
+        </LinearLayout>
+
     </ViewFlipper>
 
 </LinearLayout>
