--- a/Trigger/app/src/main/res/layout/data_list.xml
+++ b/Trigger/app/src/main/res/layout/data_list.xml
@@ -6,13 +6,13 @@
 
     <TextView android:id="@+id/name2"
         android:text="SurName"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textSize="20dp"
         />
     <TextView android:id="@+id/name1"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:text="FirstName"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
