--- a/Trigger/app/src/main/res/values/styles.xml
+++ b/Trigger/app/src/main/res/values/styles.xml
@@ -3,15 +3,16 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@android:color/holo_blue_light</item>
-        <item name="colorPrimaryDark">@android:color/holo_blue_light</item>
-        <item name="colorAccent">@android:color/darker_gray</item>
-        <item name="android:colorForeground">@android:color/holo_blue_bright</item>
-        <item name="android:navigationBarColor">@android:color/holo_blue_light</item>
-        <item name="android:colorBackground">@android:color/holo_blue_dark</item>
-        <item name="android:textColorPrimary">@android:color/background_light</item>
-        <item name="android:textColorSecondary">@android:color/darker_gray</item>
-        <item name="android:textColorPrimaryInverse">@android:color/darker_gray</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:colorForeground">@android:color/darker_gray</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
+        <item name="android:colorBackground">@android:color/background_light</item>
+        <item name="android:textColorPrimary">@android:color/primary_text_light</item>
+        <item name="android:textColorSecondary">@android:color/primary_text_light</item>
+        <item name="android:textColorPrimaryInverse">@android:color/primary_text_light</item>
+        <item name="android:textColorSecondaryInverse">@android:color/primary_text_light_nodisable</item>
     </style>
 
 </resources>
